--- a/vedika_agarwal_lab8.Rmd
+++ b/vedika_agarwal_lab8.Rmd
@@ -5,12 +5,6 @@ date: "April 8, 2017"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
-
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+Learning to make a Git Commit.
 
 
